prelims pages are sent to another proof

--- a/copyright.tex
+++ b/copyright.tex
@@ -1,12 +1,12 @@
 \thispagestyle{empty}
 \noindent
 {\rm\sf\bfseries SHIVAPADA RATNAKOSHA}\\[5pt]
-{\rm (Veerashaiva-Lingayata Samagra Paribhashika Padakosha)} 
+{\rm (Veerashaiva-Lingayata Paribhashika Padakosha)} 
 
 \noindent
-{\rm Prepared by Editorial Committe}\\
-{\rm Executive Director : Dr. Nandish Hanche}\\
-{\rm Published by JSS Granthamale, Mysuru}\\[8pt]
+{\rm Edited by Editorial Committee}\\
+{\rm Executive Editor : Dr. Nandish Hanche}\\
+{\rm Published by JSS Granthamale, Mysuru - 570 004}\\[8pt]
 {\rm Pages : 38 + 896}
 
 \vspace{1cm}
@@ -20,7 +20,7 @@
 \bigskip
 
 \noindent
-{\rm Typeset by : Sriranga Digital Software Technologies Pvt. Ltd., Srirangapatna}
+{\rm Typeset by : Sriranga Digital Software Technologies Pvt. Ltd., Srirangapattna}
 
 \medskip
 
@@ -30,20 +30,20 @@
 \vfill
 
 \noindent
-{\bf AthiRka neravu : kananxDa matutx saMsakxqqti ilAKe, beMgaLUru}
+{\bf AthiRka neravu : kananxDa matutx saMsakxqqti ilAKe, kanARTaka sakARra}
 
-\bigskip
+\vskip 1cm
 
 \noindent
 {\bf\large shivapada ratanxkoVsha}\\[5pt]
-(viVrasheYva-liMgAyata samagarx pAriBASika padakoVsha) 
+(viVrasheYva-liMgAyata pAriBASika padakoVsha) 
 
 \smallskip
 
 \noindent
 saMpAdane : saMpAdaka samiti,\\
 kAyaRnivARhaka saMpAdakaru : DA. naMdiVshf haMce\\
-parxkaTaNe : je{esf}{esf} \ garxMthamAle, meYsUru,\\[8pt]
+parxkaTaNe : je{esf}{esf} \ garxMthamAle, meYsUru - 570 004\\[8pt]
 puTagaLu : 38 + 896
 
 \vspace{1cm}
@@ -62,7 +62,7 @@ akaSxra joVDaNe : shirxVraMga DijiTalf sAPfTxveVrf TekAnxlajiVsf, perxY. li., sh
 \medskip
 
 \noindent
-mudarxkaru : lakiSxV mudarxNAlaya, beMgaLUru.
+mudarxkaru : lakiSxmXV mudarxNAlaya, beMgaLUru.
 
 \newpage
 
@@ -82,8 +82,8 @@ mudarxkaru : lakiSxV mudarxNAlaya, beMgaLUru.
 porx. ji.esf. sidadhxliMgayayx\\[8pt]
 DA. Ti.vi. veMkaTAcala shAsitxrXV\\[8pt]
 DA. enf.esf. tArAnAtha\\[8pt]
-shirxV ecf.vi. nAgarAjarAvf\\[8pt]
-DA. si. shivakumArasAvxmi\\[8pt]
+vidAvxnf DA. ecf.vi. nAgarAjarAvf\\[8pt]
+vidAvxnf DA. si. shivakumArasAvxmi\\[8pt]
 shirxV Arf.esf. pUNARnaMda\\[15pt]
 {\bf kAyaRnivARhaka saMpAdaka}\\[8pt]
 DA. naMdiVshf haMce }\relax
