--- a/macros.tex
+++ b/macros.tex
@@ -3,7 +3,7 @@ topmargin=20mm,botmargin=20mm,leftmargin=20mm,rightmargin=20mm,
 headheight=5mm,headsep=5mm,footskip=6mm,cropmarks,nopagenumbers]{zwpagelayout}
 \usepackage{hyphenat}
 %\def\-{-\penalty0\hskip0pt\relax}
-\usepackage{epsfig,graphicx}
+\usepackage{epsfig,graphicx,float}
 
 \usepackage{textpos}
 
