--- a/nivedane.tex
+++ b/nivedane.tex
@@ -7,7 +7,7 @@
 \centerline{\large\bfseries 1}
 \medskip
 
-jagatitxna yAvudeV BASeya amUlayx saMpatetxMdare sAhitayx matutx saMsakxqqti. ivugaLa mUla savxrUpavanunx tiLiyalu atayxgatayxvAda AkaraveMdare niGaMTu. oMdu BASeya sakala padasaMpatutx alilx saMgarxhagoMDu rAshiyAgirutatxde. pArxdeVshikate, dhamaR, jAti-mata hiVge halavu hinenxlegaLiMda oMdu pada aneVka rUpagaLanunx, athaRgaLanunx paDedirutatxde. niGaMTuviniMda avugaLanunx saMpUNaRvAgi ariyalu sAdhayxvilalxdidadxrU, adoMdu toVrudAriyAgirutatxde. sAdhAraNavAgi niGaMTuvinalilx athaRkekx hecucx mahatavx niVDalAgutatxde. padagaLige iruva athaRgaLu elalx kAlakUkx oMdeV bageyAgi iruvudilalx. kAlAnuguNavAgi shabadxrUpagaLu, shabAdxthaRgaLu parivataRneyanunx paDeyutitxrutatxve. I hinenxleyalilx parxti BASeyU jaMgamasavxrUpiyAgirutatxde. hAgAgi iMtaha jaMgamasavxrUpi BASeya padasaMpatatxnunx athaRmADikoLaLxlu kAladiMda kAlakekx hosa hosa niGaMTugaLu sidadhxgoLuLxtatxve. hosa niGaMTugaLu haLeya athaRgaLanUnx dAKalisikoMDu hosa visatxqqta athaRvanunx niVDutatxve. badalAguva deVsha, kAla, cariterxgaLige anuguNavAgi saqSiTxgoLuLxva elalx padasaMpatatxnunx tamomxLage kUDisikoMDu niGaMTugaLu rUpugoLuLxtatxve.
+jagatitxna yAvudeV BASeya amUlayx saMpatetxMdare sAhitayx matutx saMsakxqqti. ivugaLa mUla savxrUpavanunx tiLiyalu atayxgatayxvAda AkaraveMdare niGaMTu. oMdu BASeya sakala padasaMpatutx alilx saMgarxhagoMDu rAshiyAgirutatxde. pArxdeVshikate, dhamaR, jAti-mata hiVge halavu hinenxlegaLiMda oMdu pada aneVka rUpagaLanunx, athaRgaLanunx paDedirutatxde. niGaMTuviniMda avugaLanunx saMpUNaRvAgi ariyalu sAdhayxvilalxdidadxrU, adoMdu toVrudAriyAgirutatxde. sAdhAraNavAgi niGaMTuvinalilx athaRkekx hecucx mahatavx niVDalAgutatxde. padagaLige iruva athaRgaLu elalx kAlakUkx oMdeV bageyAgi iruvudilalx. kAlAnuguNavAgi shabadxrUpagaLu, shabAdxthaRgaLu parivataRneyanunx paDeyutitxrutatxve. I hinenxleyalilx parxtiyoMdu BASeyU jaMgamasavxrUpiyAgirutatxde. hAgAgi iMtaha jaMgamasavxrUpi BASeya padasaMpatatxnunx athaRmADikoLaLxlu kAladiMda kAlakekx hosa hosa niGaMTugaLu sidadhxgoLuLxtatxve. hosa niGaMTugaLu haLeya athaRgaLanUnx dAKalisikoMDu hosa visatxqqta athaRvanunx niVDutatxve. badalAguva deVsha, kAla, cariterxgaLige anuguNavAgi saqSiTxgoLuLxva elalx padasaMpatatxnunx tamomxLage kUDisikoMDu niGaMTugaLu rUpugoLuLxtatxve.
 
 \medskip
 
@@ -15,7 +15,7 @@ niGaMTugaLa cariterxge hoVlisidare pAriBASika niGaMTugaLa racane ititxVcinadu. p
 
 \medskip
 
-iMdu vijAcnxna matutx keYgArikegaLige saMbaMdhisidaMte vipulavAda pAriBASika padakoVshagaLu racanegoMDive. Adare samAja, saMsakxqqtigaLa keSxVtarxkekx saMbaMdhisidaMte aSuTx saMKeyxya pAriBASika niGaMTugaLu rUpugoMDilalx. AdarU visatxqqta parikalapxneyalilx pAriBASika AkaragaLaMte toVruva loVkoVpakArakavAda shAsatxrXkaqtigaLu heVraLavAgive. udAharaNege gajashAsatxrX, hayashAsatxrX, sUpashAsatxrX, shakunashAsatxrXÀtXrX, sAmudirxkashAsatxrX, shilapxshAsatxrX itAyxdi. AdudariMdaleV saMsakxqqtada AlaMkArikanAda rAjasheVKaranu kavigaLanunx kAvayxkavi, shAsatxrXkavi matutx uBayakavi eMdu mUru bageyalilx viMgaDisutAtxne. kAvayxveMbudu sArataH anuBavaveVdayxvAdare, shAsatxrX budidhx\-gamayx. anuBava matutx AloVcanegaLu manuSayxna sahaja parxvaqtitxgaLu. aMteyeV veYdika dashaRnagaLa hAgU jeYna hAgU bwdadhx dashaRnagaLa saMbaMdhadalilx BAratiVya tatatxvXdashaRnada aneVka padakoVshagaLu racitavAgive.
+iMdu vijAcnxna matutx keYgArikegaLige saMbaMdhisidaMte vipulavAda pAriBASika padakoVshagaLu racanegoMDive. Adare samAja, saMsakxqqtigaLa keSxVtarxkekx saMbaMdhisidaMte aSuTx saMKeyxya pAriBASika niGaMTugaLu rUpugoMDilalx. AdarU visatxqqta parikalapxneyalilx pAriBASika AkaragaLaMte toVruva loVkoVpakArakavAda shAsatxrXkaqtigaLu heVraLavAgive. udAharaNege gajashAsatxrX, hayashAsatxrX, sUpashAsatxrX, shakunashAsatxrX, sAmudirxkashAsatxrX, shilapxshAsatxrX itAyxdi. AdudariMdaleV saMsakxqqtada AlaMkArikanAda rAjasheVKaranu kavigaLanunx kAvayxkavi, shAsatxrXkavi matutx uBayakavi eMdu mUru bagegaLAgi viMgaDisutAtxne. kAvayxveMbudu sArataH anuBavaveVdayxvAdare, shAsatxrX budidhx\-gamayx. anuBava matutx AloVcanegaLu manuSayxna sahaja parxvaqtitxgaLu. aMteyeV veYdika dashaRnagaLa hAgU jeYna hAgU bwdadhx dashaRnagaLa saMbaMdhadalilx BAratiVya tatatxvXdashaRnada aneVka padakoVshagaLu racitavAgive.
 
 \medskip
 
@@ -35,15 +35,15 @@ I hinenxleyalilx BAratada oMdu parxmuKa dhamaRvAda viVrasheYva-liMgAyatada tAtit
 
 \medskip
 
-vacanapitAmaha Pa.gu. haLakaTiTxyavaru \textbf{1943 shivAnuBava shabadxkoVsha}da mUlaka viVrasheYva pAriBASika saMgatigaLanunx vivarisuva kelasavanunx pArxraMBisidaru. anaMtaradalilx kANisikoMDa mahatavxda viVrasheYva pAriBASika padakoVshaveMdare DA. esf.\break vidAyxshaMkararavaru basava samitige saMpAdisikoTaTx \textbf{viVrasheYva pAriBASika padakoVsha} hAgU eM.eM. kalabugiRyavara parxdhAna saMpAdakatavx\-dalilx, kananxDa matutx saMsakxqqti ilAKeyu parxkaTisida samagarx vacana saMpuTagaLa koneya saMpuTavAda \textbf{vacana pariBASA\-koVsha}. I saMpuTagaLanunx DA. esf. vidAyxshaMkararavaru saMpAdisidAdxre. basava samitiya viVrasheYva pAriBASika padakoVshavu vacana hAgU kananxDa viVrasheYva kAvayxgaLanunx oLagoMDu racitavAgidadxre, vacana pariBASAkoVshadalilx keVvala vacanasaMbaMdhi pAriBASika padagaLanunx mAtarx dAKalisalAgide. I madheyx DA. jayashirxV daMDeyavaru \textbf{beDagina vacana pariBASA koVsha}vanunx racisidAdxre. jeesfesf garxMthamAleyiMda saMsakxqqta BASeya viVrasheYva pAriBASika padakoVsha garxMthavanunx DA. eM. shivakumArasAvxmi, DA. si. shivakumArasAvxmi hAgU DA. parxBusAvxmi, vidAvxnf DA. parxBuliMga hebAbxrf, vidAvxnf ecf.vi. nAgarAjarAvf, porx. Ti.Arf.\break mahadeVvayayx, vidAvxnf ke.si. gurumalalxdeVvaru, shirxVmati esf. gwri ivarugaLu saMpAdi\-sidAdxre. I elalx niGaMTugaLu oMdoMdu shAKeya pariBASeyanunx mAtarx dAKalisidudxvu. hiVgAgi samagarxvU visatxqqtavU Ada oMdu viVrasheYva pAriBASika niGaMTina avashayxkate idedxV itutx. idanunx pUreYsuva niTiTxnalilx Igina \textbf{samagarx viVrasheYva - liMgAyata pAriBASika padagaLanunx oLagoMDa shivapada ratanxkoVsha} niGaMTu rUpisalu ciMtisalAyitu.
+vacanapitAmaha Pa.gu. haLakaTiTxyavaru \textbf{1943ralilx shivAnuBava shabadxkoVsha}da mUlaka viVrasheYva pAriBASika saMgati\-gaLanunx vivarisuva kelasavanunx pArxraMBisidaru. anaMtaradalilx kANisikoMDa mahatavxda viVrasheYva pAriBASika padakoVshaveMdare basava samitiya \textbf{viVrasheYva pAriBASika padakoVsha} hAgU eM.eM. kalabugiRyavara parxdhAna saMpAdakatavx\-dalilx, kananxDa matutx saMsakxqqti ilAKeyu parxkaTisida samagarx vacana saMpuTagaLa koneya saMpuTavAda \textbf{vacana pariBASA\-koVsha}. I saMpuTagaLanunx DA. esf. vidAyxshaMkararavaru saMpAdisidAdxre. basava samitiya viVrasheYva pAriBASika padakoVshavu vacana hAgU kananxDa \hbox{viVrasheYva} kAvayxgaLanunx oLagoMDu racitavAgidadxre, vacana pariBASAkoVshadalilx keVvala vacanasaMbaMdhi pAriBASika padagaLanunx mAtarx dAKalisalAgide. I madheyx DA. jayashirxV daMDeyavaru \textbf{beDagina vacana pariBASA koVsha}vanunx racisidAdxre. jeesfesf garxMthamAleyiMda saMsakxqqta BASeya viVrasheYva pAriBASika padakoVsha garxMthavanunx DA. eM. shivakumArasAvxmi, DA. si. shiva\-kumArasAvxmi hAgU DA. parxBusAvxmi, vidAvxnf DA. parxBuliMga hebAbxrf, vidAvxnf ecf.vi. nAgarAjarAvf, porx. Ti.Arf.\break mahadeVvayayx, vidAvxnf ke.si. gurumalalxdeVvaru, shirxVmati esf. gwri ivarugaLu saMpAdi\-sidAdxre. I elalx niGaMTugaLu oMdoMdu shAKeya pariBASeyanunx mAtarx dAKalisidudxvu. hiVgAgi samagarxvU visatxqqtavU Ada oMdu viVrasheYva pAriBASika niGaMTina avashayxkate idedxV itutx. idanunx pUreYsuva niTiTxnalilx Igina \textbf{viVrasheYva - liMgAyata pAriBASika padagaLanunx oLagoMDa shivapada ratanxkoVsha} niGaMTu rUpisalu ciMtisalAyitu.
 
 \medskip
 
-I \textbf{shivapada ratanxkoVsha} niGaMTu rUpugoMDadedxV oMdu itihAsa. jeesfesf garxMthamAleyiMda parxkaTavAda \textbf{\hbox{viVrasheYva} pAriBASika padakoVshaH} saMsakxqqta garxMthada loVkApaRNe kAyaRkarxmavu paramapUjayx \textbf{jagadugxru shirxV shivarAtirx deVshikeVMdarx mahA\-sAvxmi}gaLavara divayx sAninxdhayxdalilx, pUjayx shirxV sidedhxVshavxra mahAsAvxmigaLavara samumxKadalilx beMgaLUrina jayanagarada jeesfesf saBAMgaNadalilx 2011ralilx neraveVritu. aMdina kananxDa matutx saMsakxqqti sacivarAda shirxV goVviMda \hbox{kArajoVLa}, hiriya vidAvxMsarAda DA. ji. veMkaTasubabxyayxnavaru, porx. malelxVpuraM ji. veMkaTeVshf, porx. jayatiVthARcArayx maLagiyavaru Agamisidadxru. kaqti biDugaDeyAgutitxdadx A saMdaBaRdalilx saBeyalilx upasithxtaridadx DA. esf.eM. vaqSaBeVMdarx\-sAvxmi, porx. ji.esf. sidadhx\-liMgayayx modalAda vidAvxMsaru I mahatavxda garxMthavanunx kananxDadalilxyU taraleVbeVkeMdu otAtxyisidaru. garxMthavanunx loVkApaRNe mADida DA. ji. veMkaTasubabxyayxnavaru \hbox{vidAvxMsara} I mAtige dhanigUDisidaru. saciva shirxV goVviMda kArajoVLaravaru I saMsakxqqta garxMthavanunx kananxDakekx anuvAdisalu kananxDa matutx saMsakxqqti ilAKeyiMda anudAna niVDuvudAgi sathxLadalilxyeV GoVSi\-sidaru. idu avara saMsakxqqtiya bagegina pirxVtiyanunx toVrisutatxde. samAraMBa mugida kelaveV dinagaLalilx sakARrakekx parxsAtxvane salilxsida kUDale tamamx mAtinaMte, anudAnavanunx maMjUru mADidaru. I porxVtAsxhada PalavAgi saMsakxqqta pAriBASika padakoVsha garxMthavanunx kananxDakekx anuvAdisalu pArxraMBisalAyitu.
+I \textbf{shivapada ratanxkoVsha} niGaMTu rUpugoMDadedxV oMdu itihAsa. jeesfesf garxMthamAleyiMda parxkaTavAda \textbf{\hbox{viVrasheYva} pAriBASika padakoVshaH} saMsakxqqta garxMthada loVkApaRNe kAyaRkarxmavu paramapUjayx \textbf{jagadugxru shirxV shivarAtirx deVshikeVMdarx mahA\-sAvxmi}gaLavara divayx sAninxdhayxdalilx, pUjayx shirxV sidedhxVshavxra mahAsAvxmigaLavara samumxKadalilx beMgaLUrina jayanagarada jeesfesf saBAMgaNadalilx 2011ralilx neraveVritu. aMdina kananxDa matutx saMsakxqqti sacivarAda shirxV goVviMda \hbox{kArajoVLa}, hiriya vidAvxMsarAda DA. ji. veMkaTasubabxyayxnavaru, porx. malelxVpuraM ji. veMkaTeVshf, porx. jayatiVthARcArayx maLagiyavaru Agamisidadxru. kaqti biDugaDeyAgutitxdadx A saMdaBaRdalilx saBeyalilx upasithxtaridadx DA. esf.eM. vaqSaBeVMdarx\-sAvxmi, porx. ji.esf. sidadhx\-liMgayayx modalAda vidAvxMsaru I mahatavxda garxMthavanunx kananxDadalilxyU taraleVbeVkeMdu otAtxyisidaru. garxMthavanunx loVkApaRNe mADida DA. ji. veMkaTasubabxyayxnavaru \hbox{vidAvxMsara} I mAtige danigUDisidaru. saciva shirxV goVviMda kArajoVLaravaru I saMsakxqqta garxMthavanunx kananxDakekx anuvAdisalu kananxDa matutx saMsakxqqti ilAKeyiMda anudAna niVDuvudAgi sathxLadalilxyeV GoVSi\-sidaru. idu avara saMsakxqqtiya bagegina pirxVtiyanunx toVrisutatxde. samAraMBa mugida kelaveV dinagaLalilx sakARrakekx parxsAtxvane salilxsida kUDale tamamx mAtinaMte, anudAnavanunx maMjUru mADidaru. I porxVtAsxhada PalavAgi saMsakxqqta pAriBASika padakoVsha garxMthavanunx kananxDakekx anuvAdisalu pArxraMBisalAyitu.
 
 \medskip
 
-I viSayavanunx baLika paramapUjayx jagadugxru shirxV shivarAtirx deVshikeVMdarx mahAsAvxmigaLavaru, vijayapurada jAcnxna\-yoVgAsharxmada pUjayx shirxV sidedhxVshavxra mahAsAvxmigaLoMdige  pArxsaMgikavAgi parxsAtxvisidAga avaru saMsakxqqta hAgU kananxDa \hbox{viVrasheYva} shAsatxrX garxMthagaLu, kAvayxgaLu hAgU vacanagaLanenxlAlx oLagoMDaMte samagarx pAriBASika padakoVsha racaneyAgabeVkAdudu agatayxveMdu  aBipArxyapaTaTxru. I viSayavanunx visatxqqtavAgi caciRsuva saluvAgi pUjayx sidedhxVshavxra mahAsAvxmigaLavaru sutUtxru shirxVkeSxVtarxkekx 2013ralilx Agamisida saMdaBaRdalilx niGaMTu pariNatara saBeyanunx EpaRDisalAgitutx. A saBeyalilx imamxDi shivabasava sAvxmigaLu, ecf. gaMgAdharanf, porx. esf. naMjuMDayayx, shirxV enf. \hbox{basavArAdhayx}, DA. Ti.vi. veMkaTAcala shAsitxrXV, porx. ji.esf. sidadhxliMgayayx, DA. go.ru. cananxbasapapx, DA. esf. vidAyxshaMkara, DA. enf.esf. tArAnAtha, DA. Ti.Arf. mahadeVvayayx, shirxV Arf. shivaNaNx, DA. enf.ji. mahadeVvapapx, Da. ecf.vi. nAgarAjarAvf, DA. si. shivakumArasAvxmi, shirxV Arf.esf. pUNARnaMda muMtAdavaru BAgavahisidadxru.
+I viSayavanunx baLika paramapUjayx jagadugxru shirxV shivarAtirx deVshikeVMdarx mahAsAvxmigaLavaru, vijayapurada jAcnxna\-yoVgAsharxmada pUjayx shirxV sidedhxVshavxra mahAsAvxmigaLoMdige  pArxsaMgikavAgi parxsAtxvisidAga avaru saMsakxqqta hAgU kananxDa \hbox{viVrasheYva} shAsatxrX garxMthagaLu, kAvayxgaLu hAgU vacanagaLanenxlAlx oLagoMDaMte samagarx pAriBASika padakoVsha racaneyAgabeVkAdudu agatayxveMdu  aBipArxyapaTaTxru. I viSayavanunx visatxqqtavAgi caciRsuva saluvAgi pUjayx sidedhxVshavxra mahAsAvxmigaLavaru sutUtxru shirxVkeSxVtarxkekx 2013ralilx Agamisida saMdaBaRdalilx niGaMTu pariNatara saBeyanunx EpaRDisalAgitutx. A saBeyalilx imamxDi shivabasava sAvxmigaLu, ecf. gaMgAdharanf, porx. esf. naMjuMDayayx, shirxV enf. \hbox{basavArAdhayx}, DA. Ti.vi. veMkaTAcala shAsitxrXV, porx. ji.esf. sidadhxliMgayayx, DA. go.ru. cananxbasapapx, DA. esf. vidAyxshaMkara, DA. enf.esf. tArAnAtha, DA. Ti.Arf. mahadeVvayayx, shirxV esf. shivaNaNx, DA. enf.ji. mAhadeVvapapx, Da. ecf.vi. nAgarAjarAvf, DA. si. shivakumArasAvxmi, shirxV Arf.esf. pUNARnaMda muMtAdavaru BAgavahisidadxru.
 
 \medskip
 
@@ -51,11 +51,11 @@ hiVge visAtxravAda caceR naDeda baLika niGaMTuvina pArxthamika kAyaR AraMBagoMDi
 
 \medskip
 
-kananxDada Ayekxya viSaya caceRge baMdAga halavu toDakugaLu edurAdavu. adaralilx I modaleV racitavAgidadx vacanagaLa pAriBASika padakoVshagaLiMda shabadxsaMgarxhakekx saMbaMdhisida toDaku kUDa oMdu. haLakaTiTxyavara shivAnuBavakoVsha, vacana pariBASA\-koVsha, basava samitiya viVrasheYva pAriBASika padakoVsha, DA. jayashirxV daMDeyavara beDagina vacana pariBASA koVsha itAyxdi aneVka niGaMTugaLu kananxDadalilx racanegoMDidadxvu. parxsutxta niGaMTu racaneya saMdaBaRdalilx ivugaLa parAmashaRna kAyaR anivAyaRvAgitutx. Adare I garxMthagaLiMda neVravAgi eravalu paDeyuva badalu, vacana saMpuTagaLanunx vidAvxMsariMda twlanika\-vAgi parishiVlisi hosa padagaLanunx saMgarxhisi paDeyalu nidhaRrisalAyitu. adaraMte 14 jana vidAvxMsarige vacana saMpuTagaLanunx niVDi padasaMgarxhada kAyaRvanunx vahisalAyitu.
+kananxDada Ayekxya viSaya caceRge baMdAga halavu toDakugaLu edurAdavu. adaralilx I modaleV racitavAgidadx vacanagaLa pAriBASika padakoVshagaLiMda shabadxsaMgarxhakekx saMbaMdhisida toDaku kUDa oMdu. haLakaTiTxyavara shivAnuBavashabadxkoVsha, vacana pariBASA\-koVsha, basava samitiya viVrasheYva pAriBASika padakoVsha, DA. jayashirxV daMDeyavara beDagina vacana pariBASA koVsha itAyxdi aneVka niGaMTugaLu kananxDadalilx racanegoMDidadxvu. parxsutxta niGaMTu racaneya saMdaBaRdalilx ivugaLa parAmashaRna kAyaR anivAyaRvAgitutx. Adare I garxMthagaLiMda neVravAgi eravalu paDeyuva badalu, vacana saMpuTagaLanunx vidAvxMsariMda twlanika\-vAgi parishiVlisi hosa padagaLanunx saMgarxhisi paDeyalu nidhaRrisalAyitu. adaraMte 14 jana vidAvxMsarige vacana saMpuTagaLanunx niVDi padasaMgarxhada kAyaRvanunx vahisalAyitu.
 
 \medskip
 
-niGaMTuvina kAyaRda matotxMdu visatxraNeyAgi kananxDa viVrasheYva kAvayxgaLiMda padasaMgarxhada kelasa naDeyitu. basava \hbox{samitiya} viVrasheYva pAriBASika padakoVshadalilx vacanagaLu hAgU kananxDa viVrasheYva kAvayxgaLiMda ulelxVKagaLu matutx parxyoVga\-gaLanunx avara opipxge paDedu baLasikoLaLxlAyitu. Adare kaqtiya samagarxteya daqSiTxyiMda ininxtara garxMthagaLanunx saha parishiVlisuvudu agatayxveMdu vidAvxMsaru tiVmARnisidaru. hariharaniMda modalugoMDu SaDakaSxriyavarege sumAru 250kUkx hecucx viVrasheYva kavigaLa paTiTxyanunx sidadhxpaDisalAyitu. 
+niGaMTuvina kAyaRda matotxMdu visatxraNeyAgi kananxDa viVrasheYva kAvayxgaLiMda padasaMgarxhada kelasa naDeyitu. basava \hbox{samitiya} viVrasheYva pAriBASika padakoVshadalilx vacanagaLu hAgU kananxDa viVrasheYva kAvayxgaLiMda ulelxVKagaLu matutx parxyoVga\-gaLanunx avara opipxge paDedu baLasikoLaLxlAyitu. Adare kaqtiya samagarxteya daqSiTxyiMda ininxtara garxMthagaLanunx saha parishiVlisuvudu agatayxveMdu vidAvxMsaru tiVmARnisidaru. hariharaniMda modalugoMDu SaDakaSxraviVranavarege sumAru 250kUkx hecucx viVrasheYva kavigaLa paTiTxyanunx sidadhxpaDisalAyitu. 
 
 \medskip
 
@@ -63,7 +63,7 @@ I paTiTxganuguNavAgi viVrasheYva kAvayxgaLanunx saMgarxhisuvudu savAlina kelasav
 
 \medskip
 
-I padasaMgarxhakAyaR mugiyalu aneVka tiMgaLugaLeV hiDidavu. aneVka jana vidAvxMsaru avara kAyaRbAhuLayxda naDuve kUDa biDuvu mADikoMDu I kAyaRvanunx mADikoTaTxru. rAshi rAshi padapaTiTxkegaLu sidadhxvAgi baMdavu. avugaLa saMKeyxyeV sumAru oMdu lakaSxdaSiTxtutx. Aga padapaTiTxkegaLanunx vacanagaLu hAgU kAvayxgaLeMdu eraDu BAgavAgi mADikoLaLxlAyitu. \hbox{anaMtara} vacana hAgU kAvayxgaLa padapaTiTxkegaLanunx akArAdiyAgi viMgaDisikoLaLxlAyitu. akArAdiyalilx hiVge punarAvataRnegoMDa hecicxna padagaLanunx keYbiDalAyitu. hiVge keYbiDuvAga, oMdu parxdhAna ulelxVKada pada beVre beVre athaRcACxye hoMdidadxre avugaLanunx uLisikoLaLxlAyitu. hAge uLida padagaLa saMKeyxyeV sumAru hatutx sAviradaSATxgitutx. ivugaLanunx oMdu muKayx ulelxVKapadada aDiyalilx, Binanx athaRcACxyeyiruva udadhxqqta vAkayxgaLanunx niVDi, avugaLige beVre saMKeyx niVDi, athaRvanunx dAKalisalAyitu.
+I padasaMgarxhakAyaR mugiyalu aneVka tiMgaLugaLeV hiDidavu. aneVka jana vidAvxMsaru avara kAyaRbAhuLayxda naDuve kUDa biDuvu mADikoMDu I kAyaRvanunx mADikoTaTxru. rAshi rAshi padapaTiTxkegaLu sidadhxvAgi baMdavu. avugaLa saMKeyxyeV sumAru oMdu lakaSxdaSiTxtutx. Aga padapaTiTxkegaLanunx vacanagaLu hAgU kAvayxgaLeMdu eraDu BAgagaLAgi mADikoLaLxlAyitu. \hbox{anaMtara} vacana hAgU kAvayxgaLa padapaTiTxkegaLanunx akArAdiyAgi viMgaDisikoLaLxlAyitu. akArAdiyalilx hiVge punarA\-vataRnegoMDa hecicxna padagaLanunx keYbiDalAyitu. hiVge keYbiDuvAga, oMdu parxdhAna ulelxVKada pada beVre beVre athaRcACxye hoMdidadxre avugaLanunx uLisikoLaLxlAyitu. hAge uLida padagaLa saMKeyxyeV sumAru hatutx sAviradaSATxgitutx. ivugaLanunx oMdu muKayx ulelxVKapadada aDiyalilx, Binanx athaRcACxyeyiruva udadhxqqta vAkayxgaLanunx niVDi, avugaLige beVre saMKeyx niVDi, athaRvanunx dAKalisalAyitu.
 
 \medskip
 
@@ -71,7 +71,7 @@ padapaTiTxkeyanunx niVDi padasaMgarxha mADalu koVridAga adaralilx AyekxgoMDa pad
 
 \newpage
 
-I naDuve pUjayx shirxV sidedhxVshavxra mahAsAvxmigaLavaru pAriBASika padagaLanunx parishiVlisi aMtimavAgi pAriBASikavalalxda kelavu padagaLanunx keYbiTuTx uLidaMte aMtima padagaLanunx Ayekx mADikoTaTxru hAgU avara sUcaneyaMte saMsakxqqta pAriBASika padagaLige niSapxtitx\-yanunx niVDa\-beVkeMdu tiVmARnisi saMpAditavAgidadx elalx padagaLanUnx tumakUrina DA. bi. rAjasheVKarayayxnavarige niSapxtitx racisi\-koDuvaMte niVDalAyitu. avaru  niSapxtitxgaLanunx dAKalisikoTaTxru. I niSapxtitxyanunx bahuteVka saMsakxqqta padagaLige mAtarx niVDa\-lAgide. 
+I naDuve pUjayx shirxV sidedhxVshavxra mahAsAvxmigaLavaru pAriBASika padagaLanunx parishiVlisi aMtimavAgi pAriBASikavalalxda kelavu padagaLanunx keYbiTuTx uLidaMte aMtima padagaLanunx Ayekx mADikoTaTxru hAgU avara sUcaneyaMte saMsakxqqta pAriBASika padagaLige niSapxtitx\-yanunx niVDa\-beVkeMdu tiVmARnisi saMpAditavAgidadx elalx padagaLanUnx tumakUrina DA. bi. rAjasheVKarayayxnavarige niSapxtitx sidadhxpaDisi\-koDuvaMte niVDalAyitu. avaru  niSapxtitxgaLanunx dAKalisikoTaTxru. I niSapxtitxyanunx bahuteVka saMsakxqqta padagaLige mAtarx niVDa\-lAgide. 
 
 \medskip
 
@@ -87,12 +87,12 @@ I kAyaRdalilx neravige baMdadudx ``vacana saMcaya DATfkAM'' aMtajARla. I aMtajAR
 
 \medskip
 
-I naDuve samitiya sadasayxrAgidadx shirxV enf. basavArAdhayx hAgU DA. esf. vidAyxshaMkarf, porx. esf, naMjuMDayayxnavaru vidhivasharAdaru. avara anupa\-sithxti elalx saBegaLalUlx bahaLavAgi kADitu. aMtimavAgi porx. ji.esf. sidadxliMgayayx, DA. Ti.vi. veMkaTAcala shAsitxrXV,  DA. ecf.vi. nAgarAjarAvf, DA. enf.esf. tArAnAtha, DA. si. shivakumArasAvxmi, shirxV. Arf.esf. pUNARnaMda, DA. naMdiVshf haMceravaru\-gaLanunx oLagoMDa saMpAdaka samitiyu 40kUkx hecucx saBegaLanunx naDesi saBAparxtiyanunx parishiVlisi, muKayx ulelxVKagaLanunx athaR, niSapxtitxgaLanunx, athaRcACxye, ulelxVKagaLanunx kUlaMkaSavAgi gamanisi niGaMTuvige oMdu sapxSaTx rUpavanunx niVDitu. I saMdaBaRdalilx je{esf}{esf} mahA vidAyxpiVThada shirxV basavaNaNxnavaru hAgU meYsUru vishavxvidAyxnilayada parxsArAMgada nivaqtatx nwkararAda shirxVmati kamalamamxnavaru karaDu tidudxvalilx mADida sahAya bahu doDaDxdu. hiVge aMtimavAgi niGaMTu sidadhxvAyitu.
+I naDuve samitiya sadasayxrAgidadx shirxV enf. basavArAdhayx hAgU DA. esf. vidAyxshaMkara, porx. esf, naMjuMDayayxnavaru vidhivasharAdaru. avara anupa\-sithxti elalx saBegaLalUlx bahaLavAgi kADitu. aMtimavAgi porx. ji.esf. sidadxliMgayayx, DA. Ti.vi. veMkaTAcala shAsitxrXV,  DA. ecf.vi. nAgarAjarAvf, DA. enf.esf. tArAnAtha, DA. si. shivakumArasAvxmi, shirxV. Arf.esf. pUNARnaMda, DA. naMdiVshf haMce ivavaru\-gaLanunx oLagoMDa saMpAdaka samitiyu 40kUkx hecucx saBegaLanunx naDesi saBAparxtiyanunx parishiVlisi, muKayx ulelxVKagaLanunx athaR, niSapxtitxgaLanunx, athaRcACxye, ulelxVKagaLanunx kUlaMkaSavAgi gamanisi niGaMTuvige oMdu sapxSaTx rUpavanunx niVDitu. I saMdaBaRdalilx je{esf}{esf} mahA vidAyxpiVThada shirxV basavaNaNxnavaru hAgU meYsUru vishavxvidAyxnilayada parxsArAMgada nivaqtatx nwkararAda shirxVmati kamalamamxnavaru karaDu tidudxvalilx mADida sahAya bahu doDaDxdu. hiVge aMtimavAgi niGaMTu sidadhxvAyitu.
 
 
 \medskip
 
-BASAshAsatxrXda tatavxgaLige anusAravAgi, veYjAcnxnikavAgi, cAritirxka vivaraNeyiMda kUDidudx, parxmANaBUtavu, samagarxvU Ada \textbf{shivapada ratanxkoVsha}vAgide. idu sAvira puTagaLa baqhatf garxMthavAgidudx, parxti puTadalilxyU eraDu aMkaNagaLive. I padakoVshadalilx anubaMdhada ulelxVKagaLanunx biTuTx 4,681 muKayx ulelxVKagaLanUnx, sumAru 40,000 kUkx hecucx parxyoVgagaLanUnx niVDalAgide. I niGaMTu iduvarege baMdiruva bahuteVka viVrasheYva pAriBASika padakoVshagaLiMda sahAya paDedidadxrU avugaLa saMgarxharUpa\-valalx. I hiMdina elAlx padakoVshagaLigiMta hecicxna adhayxyana sAmagirxyanunx oLagoMDide. 
+BASAshAsatxrXda tatavxgaLige anusAravAgi, veYjAcnxnikavAgi, cAritirxka vivaraNeyiMda kUDidudx, parxmANaBUtavu, samagarxvU Ada \textbf{shivapada ratanxkoVsha}vAgide. idu sumAru sAvira puTagaLa baqhatf garxMthavAgidudx, parxti puTadalilxyU eraDu aMkaNagaLive. I padakoVshadalilx anubaMdhada ulelxVKagaLanunx biTuTx 4,681 muKayx ulelxVKagaLanUnx, sumAru 40,000 kUkx hecucx parxyoVga\-gaLanUnx niVDalAgide. I niGaMTu iduvarege baMdiruva bahuteVka viVrasheYva pAriBASika padakoVshagaLiMda sahAya paDedidadxrU avugaLa saMgarxharUpa\-valalx. I hiMdina elAlx padakoVshagaLigiMta hecicxna adhayxyana sAmagirxyanunx oLagoMDide. 
 
 \newpage
 
@@ -107,22 +107,22 @@ BASAshAsatxrXda tatavxgaLige anusAravAgi, veYjAcnxnikavAgi, cAritirxka vivaraNey
 {\large\bf muKayx ulelxVKa}
 \end{center}
 
-I niGaMTanunx sidadhxpaDisuvAga anusarisiruva karxma, shabadxgaLanunx, avugaLa athaRgaLanunx, avakekx saMbaMdhisida parxyoVga\-gaLanunx ulelxVKisiruva riVti; niSapxtitx BAgavanunx niVDuvAga avalaMbisiruva vidhAna I muMtAda vivaragaLu I keLakaMDaMte ide. padakoVshadalilx muKayx ulelxVKagaLAgi koDalAgiruva shabadxgaLanunx sAdhayxvAdaSuTx maTiTxge parxkaqtirUpadalilxyeV koDalu parxyatinxsa\-lAgide. kelavu samAsa padagaLa rUpadalilxyU ive. AdarU mUrakikxMta hecucx padagaLiruva samAsagaLanunx, viBakatxyXMta padagaLiruva padasamucaCxyagaLanunx anubaMdhadalilx niVDalAgide. kaNatxpipxniMda kelavu parxkaqtirUpada ulelxVKagaLu biTuTxhoVgidudx avugaLanunx anubaMdhadalilx seVrisalAgide. matutx 14 pAyiMTf dapapx akaSxradalilx I padagaLanunx dAKalisalAgide. muKayx ulelxVKavanunx anusarisikoMDu baMdiruva ulelxVKagaLanunx muKayx ulelxVKada keLage niVDi avugaLige saMKeyxyanunx niVDalAgide. \textbf{udAharaNege: nAda: 1. shiva; sAthxvara-jaMgamAtamxkavAda jagatutx biMdu-nAdarUpa\-dalilxde. avugaLalilx shakitxyu biMdu. shivanu nAda. nAdavu biMduvige AdhAra. biMduvu jagatitxge AdhAra. iveraDara samAgama jagatitxge AdhAravAgive:}
+I niGaMTanunx sidadhxpaDisuvAga anusarisiruva karxma, shabadxgaLanunx, avugaLa athaRgaLanunx, avakekx saMbaMdhisida parxyoVga\-gaLanunx ulelxVKisiruva riVti; niSapxtitx BAgavanunx niVDuvAga avalaMbisiruva vidhAna I muMtAda vivaragaLu I keLakaMDaMte ide. padakoVshadalilx muKayx ulelxVKagaLAgi koDalAgiruva shabadxgaLanunx sAdhayxvAdaSuTx maTiTxge parxkaqtirUpadalilxyeV koDalu parxyatinxsa\-lAgide. kelavu samAsa padagaLa rUpadalilxyU ive. AdarU mUrakikxMta hecucx padagaLiruva samAsagaLanunx, viBakatxyXMta padagaLiruva padasamucacxyagaLanunx anubaMdhadalilx niVDalAgide. kaNatxpipxniMda kelavu parxkaqtirUpada ulelxVKagaLu biTuTxhoVgidudx avugaLanunx anubaMdhadalilx seVrisalAgide. matutx 14 pAyiMTf dapapx akaSxradalilx I padagaLanunx dAKalisalAgide. muKayx ulelxVKavanunx anusarisikoMDu baMdiruva ulelxVKagaLanunx muKayx ulelxVKada keLage niVDi avugaLige saMKeyxyanunx niVDalAgide. \textbf{udAharaNege: nAda: 1. shiva; sAthxvara-jaMgamAtamxkavAda jagatutx biMdu-nAdarUpa\-dalilxde. avugaLalilx shakitxyu biMdu. shivanu nAda. nAdavu biMduvige AdhAra. biMduvu jagatitxge AdhAra. iveraDara samAgama jagatitxge AdhAravAgive:}
 \begin{quote}
-{\sl biMdunAdAtamxkaM savaRM jagatf sAthxvarajaMgamamf |}\\[3pt]
-{\sl biMduH shakitxH shivoV nAdaH shivashakAtxyXtamxkaM jagatf ||}\\[3pt]
-{\sl nAdAdhAramayaM biMduH biMdAvxdhAramidaM jagatf |}\\[3pt]
-{\sl jagadAdhAraBUtw hi biMdunAdw vayxvasithxtw ||}\hfill (caM.A., kirx.pA., 3. 13-14, 17)
+{\sl\bfseries biMdunAdAtamxkaM savaRM jagatf sAthxvarajaMgamamf |}\\[3pt]
+{\sl\bfseries biMduH shakitxH shivoV nAdaH shivashakAtxyXtamxkaM jagatf ||}\\[3pt]
+{\sl\bfseries nAdAdhAramayaM biMduH biMdAvxdhAramidaM jagatf |}\\[3pt]
+{\sl\bfseries jagadAdhAraBUtw hi biMdunAdw vayxvasithxtw ||}\hfill (caM.A., kirx.pA., 3. 13-14, 17)
 \end{quote}
 
 \noindent
 \textbf{2. nAda biMdu kale eMba jagatitxge kAraNavAda mUru tatatxvXgaLalilx oMdu. nAdarUpavAda shivaneV liMga:}
 \begin{quote}
-{\sl nAdarUpaH shivaH sAkASxlilxMgamitayxBidhiVyateV |}\hfill {(sU.A., kirx.pA., 6.3)}\\[5pt]
-{\sl biMduH shakitxH shivoV nAdaH kalA saMyoVga Eva ca |}\\[2pt]
-{\sl shivashakotxyXVBaRveVdoyxVgoV jagatfsaqSaTxyXthaRkAraNamf |}\hfill {(shi.ta.ra., BA-1, 1.4.25)}\\[5pt]
-{\sl nAdoV liMgamiti porxVkotxV biMduraMgamitiVritaH}\\[2pt]
-{\sl kalA saMyoVga ituyxkAtx tayoVliRMgAMgayoVsatxthA}\hfill {(shivasU. 29-68)}
+{\sl\bfseries nAdarUpaH shivaH sAkASxlilxMgamitayxBidhiVyateV |}\hfill {(sU.A., kirx.pA., 6.3)}\\[5pt]
+{\sl\bfseries biMduH shakitxH shivoV nAdaH kalA saMyoVga Eva ca |}\\[2pt]
+{\sl\bfseries shivashakotxyXVBaRveVdoyxVgoV jagatfsaqSaTxyXthaRkAraNamf |}\hfill {(shi.ta.ra., BA-1, 1.4.25)}\\[5pt]
+{\sl\bfseries nAdoV liMgamiti porxVkotxV biMduraMgamitiVritaH}\\[2pt]
+{\sl\bfseries kalA saMyoVga ituyxkAtx tayoVliRMgAMgayoVsatxthA}\hfill {(shivasU. 29-68)}
 \end{quote}
 
 \medskip
@@ -146,14 +146,14 @@ oMdu shabadxkekx parxyoVgagaLanunx niVDuvAga modalige saMsakxqqta parxyoVgagaLan
 
 \medskip
 
-saMsakxqqtadiMda parxyoVgagaLanunx koDuvAga kAlAnukarxmaNikeyanunx hAgU avugaLanunx yAva garxMthadiMda yAva saMdhi, sholxVkadiMda Ayudx koDalAgide eMdu tiLisalAgide. hAgeyeV vacanagaLiMda sUcisuvAga kaMsadalilx samagarx vacana \hbox{saMpuTada} saMKeyx hAgU vacanakArara saMkiSxpatx nAmasUci hAgU vacanada saMKeyx matutx puTasaMKeyxyanunx niVDalAgide. kAvayx\-gaLanunx niVDuvAga kUDa kAvayxda shiVSiRkeya saMkiSxpatxsUci, saMdhi, adhAyxyada saMKeyxyanunx niVDalAgide. {\bf udAharaNege: Eka\-BAjanasathxla: aikayxsathxlada nAlukx avAMtarasathxlagaLalilx oMdu; shivanoMdige beretuhoVda sAdhakanige elalxvU shivAdevxYta eMdu BAvisuva sithxti; I jagatetxlalxvU shivamayaveMdu BAvisuva sAdhakanige shivanobabxneV EkeYka AsharxyanAgidAdxne eMdu nirUpisuva sathxla; tananxnunx, samasatx jagatatxnunx matutx shivananunx oMdAgi (adevxYta) BAvisuvudariMda shivaparxsAdavU tananx parxsAdaveV Agide eMba parxsAdadalilx aikayxmatiyuLaLxvanAgutAtxne:}
+saMsakxqqtadiMda parxyoVgagaLanunx koDuvAga kAlAnukarxmaNikeyanunx hAgU avugaLanunx yAva garxMthadiMda yAva saMdhi, sholxVkadiMda Ayudx koDalAgide eMdu tiLisalAgide. hAgeyeV vacanagaLiMda sUcisuvAga kaMsadalilx samagarx vacana \hbox{saMpuTada} saMKeyx hAgU vacanakArara saMkiSxpatx nAmasUci hAgU vacanada saMKeyx matutx puTasaMKeyxgaLanunx niVDalAgide. kAvayx\-gaLanunx niVDuvAga kUDa kAvayxda shiVSiRkeya saMkiSxpatxsUci, saMdhi, adhAyxyada saMKeyxyanunx niVDalAgide. {\bf udAharaNege: Eka\-BAjanasathxla: aikayxsathxlada nAlukx avAMtarasathxlagaLalilx oMdu; shivanoMdige beretuhoVda sAdhakanige elalxvU shivAdevxYta eMdu BAvisuva sithxti; I jagatetxlalxvU shivamayaveMdu BAvisuva sAdhakanige shivanobabxneV EkeYka AsharxyanAgidAdxne eMdu nirUpisuva sathxla; tananxnunx, samasatx jagatatxnunx matutx shivananunx oMdAgi (adevxYta) BAvisuvudariMda shivaparxsAdavU tananx parxsAdaveV Agide eMba parxsAdadalilx aikayxmatiyuLaLxvanAgutAtxne:}
 \begin{quote}
-{\sl aikayxsathxlamidaM porxVkatxM catudhAR munipuMgava |}\\[3pt]
-{\sl aikayxmAcArasaMpatitxH EkaBAjanameVva ca ||}\\[3pt]
-{\sl vishavxM shivamayaM ceVti sadA BAvayatoV dhiyA |}\\[3pt]
-{\sl shiveYkaBAjanAtamxtAvxdeVkaBAjanamucayxteV ||}\\[3pt]
-{\sl savxsayx savaRsayx loVkasayx shivAsAyxdevxYtadashaRnAtf |}\\[3pt]
-{\sl EkaBAjanayoVgeVna parxsAdeYkayxmatiBaRveVtf ||}\hfill (si.shi., 14. 3, 28-29)
+{\sl\bfseries aikayxsathxlamidaM porxVkatxM catudhAR munipuMgava |}\\[3pt]
+{\sl\bfseries aikayxmAcArasaMpatitxH EkaBAjanameVva ca ||}\\[3pt]
+{\sl\bfseries vishavxM shivamayaM ceVti sadA BAvayatoV dhiyA |}\\[3pt]
+{\sl\bfseries shiveYkaBAjanAtamxtAvxdeVkaBAjanamucayxteV ||}\\[3pt]
+{\sl\bfseries savxsayx savaRsayx loVkasayx shivAsAyxdevxYtadashaRnAtf |}\\[3pt]
+{\sl\bfseries EkaBAjanayoVgeVna parxsAdeYkayxmatiBaRveVtf ||}\hfill (si.shi., 14. 3, 28-29)
 \end{quote}
 
 \noindent
@@ -164,6 +164,10 @@ EkaBAjanasathxla, sahajaBoVjanasathxla eMba eMTu sathxlaM\-gaLanunx sheVSAMgasav
 (EkaBAjanaM iti sathxlaM - EkaBAjanasathxlaM)
 
 \bigskip
+
+\begin{center}
+{\large\bf athaR vivaraNa karxma}
+\end{center}
 
 padagaLa athaRvanunx vivarisuvAga modalu vAcAyxthaRvanunx athavA sAmAnayxvAda athaRvanunx heVLi AmeVle pAriBASika athaRvanunx koDalAgide. kelavu kaDe parxyoVgagaLu doreyade idadxrU avu pAriBASika athaRgaLanunx koDuvaMtidadxre avu\-gaLanUnx seVrisalAgide. pAriBASika padagaLa athaR sapxSaTxvAguvaMte saMkiSxpatxvAgi vivaraNe niVDi, adeV athaR baruva beVre padagaLanunx payARyavAgi koDalAgide. oMdakikxMta hecucx athaRgaLidadxre 1, 2, 3 hiVge saMKeyxgaLanunx koTuTx vividha athaRgaLanunx niVDalAgide. udAharaNege: aMga: 1. oDalu, deVha 2. deVhada oMdu BAga; avayava; 3. tavxkukx athavA camaR 4. Atamx 5. shudadhxjiVvAtamx hiVge `aMga' padakekx iruva oTuTx 20 vividha athaRgaLanunx niVDalAgide. muKayx shabadxgaLige irabahudAda sAdaqshayxgaLanunx itara shabadxgaLoMdige ``parAmashiRsi(parA)'', ``visheVSa'', ``noVDi'' eMba sUcanegaLa mUlaka gamana seLeyalAgide. udAharaNege : \textbf{``aMkurashiVla'' (parA: sadAcAra) /aMgavideyx parA- aMga} itAyxdi. aMteyeV shabadxda oMdu athaR adara jAcnxtishabadxda athavA beVroMdu shabadxda athaRkekx samAnavAgidadxre A eraDaneya shabadxda athaRvanunx matetx ulelxVKisade samAnAthaRka cihenx (=) hAki sUcisalAgide. udAharaNege: \textbf{aMgaleVpasathxLa=aMgaleVpanasathxLa} matutx \textbf{aMgaliMgasaMga=aMgaliMgasaMbaMdha} itAyxdi.
 
@@ -180,7 +184,7 @@ padagaLa athaRvanunx vivarisuvAga modalu vAcAyxthaRvanunx athavA sAmAnayxvAda at
 \noindent
 (nAdasayx cakarxM - nAdacakarxM)
 
-\item {\bf alapx virAma (:)} : parxdhAna athaR hAgU itara athaRgaLanunx oMdeDe ulelxVKisuvAga madhayxdalilx alapxvirAmavanunx baLasalAgide. udAharaNege: aMgatatavx : \textbf{jiVva, shivana ceYtanayx}. hiVge
+\item {\bf alapx virAma (,)} : parxdhAna athaR hAgU itara athaRgaLanunx oMdeDe ulelxVKisuvAga madhayxdalilx alapxvirAmavanunx baLasalAgide. udAharaNege: aMgatatavx : \textbf{jiVva, shivana ceYtanayx}. hiVge
 
 \item niSapxtitx BAgada oMdu parxdhAna vivaraNe mugida naMtara matotxMdu pUraka athaRniSapxtitx AraMBakUkx modalu I cihenx\-yanunx baLasalAgide. udAharaNege: 
 
@@ -214,17 +218,17 @@ padagaLa athaRvanunx vivarisuvAga modalu vAcAyxthaRvanunx athavA sAmAnayxvAda at
 \end{center}
 {\bf 13 pAyiMTf dapapx akaSxra :} 
 \begin{enumerate}
-\item padakoVshada muKayx ulelxVKada shabadxgaLige I aLateya akaSxragaLanunx baLasalAgide.
-\item oMdu muKayx padakekx, ininxtara athaRCAye idAdxga A padagaLanunx sUcisalu I aLateya akaSxragaLanunx baLasalAgide.
+\item padakoVshada muKayx ulelxVKada shabadxgaLige I gAtarxda akaSxragaLanunx baLasalAgide.
+\item oMdu muKayx padakekx, ininxtara athaRCAye idAdxga A padagaLanunx sUcisalu I gAtarxda akaSxragaLanunx baLasalAgide.
 \end{enumerate}
 
 \noindent
-{\bf 12 pAyiMTf dapapx akaSxra :} muKayx ulelxVKada shabadxda athaRgaLige dapapxkaSxragaLalilx I aLateya akaSxravanunx baLasalAgide.
+{\bf 12 pAyiMTf dapapx akaSxra :} muKayx ulelxVKada shabadxda athaRgaLige dapapxkaSxragaLalilx I gAtarxda akaSxravanunx baLasalAgide.
 
 \medskip
 
 \noindent
-{\bf 12 pAyiMTf sAdA akaSxra :} parxyoVgagaLanunx hAgU niSapxtitxgaLanunx I aLateya akaSxradalilx niVDalAgide.
+{\bf 12 pAyiMTf sAdA akaSxra :} parxyoVgagaLanunx hAgU niSapxtitxgaLanunx I gAtarxda akaSxradalilx niVDalAgide.
 
 \bigskip
 
@@ -258,21 +262,21 @@ I pAriBASika garxMtha racane sArataH oMdu vidavxtetxya kAyaR. idu eSuTx sharxmay
 
 \medskip
 
-I niGaMTuvina kAyaRdalilx namage AraMBadalilx neravAda hiriya vidAvxMsaru, niGaMTu tajacnxru Ada matutx Iga namomxMdi\-gilalxda imamxDi shivabasava sAvxmigaLu, ecf. gaMgAdharanf, shirxV enf. basavArAdhayx, DA. esf. vidAyxshaMkara hAgU porx. esf. naMjuMDayayxnavarugaLanunx manaHpUvaRkavAgi neneyutetxVve.
+I niGaMTuvina kAyaRdalilx namage AraMBadalilx neravAda hiriya vidAvxMsaru, niGaMTu tajacnxru Ada matutx Iga namomxMdi\-gilalxda shirxV imamxDi shivabasava sAvxmigaLu, shirxV ecf. gaMgAdharanf, shirxV enf. basavArAdhayx, DA. esf. vidAyxshaMkara hAgU porx. esf. naMjuMDayayxnavaru avaranUnx manaHpUvaRkavAgi neneyutetxVve.
 
 \medskip
 
-I garxMtha rUpagoLuLxvalilx sahakarisida parxkaTaNa viBAgada hiMdina nideVRshakashirxV ke.si. shivapapxnavarige, Igina nideVRshaka porx. morabada malilxkAjuRna, shirxV Ti.pi. parxBusAvxmiyavarige matutx yoVjaneya sahAyaka shirxV nagaleR shivakumArfravarige kaqtajacnxtegaLu. I \hbox{yoVjaneyu} acucxkaTATxgi oDamUDalu kAraNarAdavaru shirxVraMga DijiTelf sAPfTxveVrf TekAnxlajisf perxYveVTf limiTeDf kaMpani\-yavaru; adara muKayxsathxrAda porx. si.esf. yoVgAnaMda, shirxV ajuRnf kashayxpf, shirxV shivashaMkarfravara eDebiDada sahakArakekx dhanayxvAdagaLu. aneVka goMdalagaLanunx bageharisi nAvu niVDida aneVka toMdaregaLanunx sahisikoMDu, beVsaragoLaLxde 15kUkx hecucx bAri tidudxpaDigaLanunx aLavaDisi, I niGaMTuvina kAyaRvanunx tALemxyiMda mADikoTaTx shirxV rAGaveVMdarx parxsAdf matutx shirxVmati parxtiBAravarigU tuMbu haqdayada kaqtajacnxtegaLu. garxMthakekx muKapuTavanunx racisikoTaTx maMjunAthfravarige, shirxVmaThada kAyakabaMdhugaLige vaMdanegaLu. 
+I garxMtha rUpagoLuLxvalilx sahakarisida parxkaTaNa viBAgada hiMdina nideVRshakashirxV ke.si. shivapapxnavarige, Igina nideVRshaka porx. morabada malilxkAjuRna, shirxV Ti.pi. parxBusAvxmiyavarige matutx yoVjaneya sahAyaka shirxV nagaleR shivakumArfravarige kaqtajacnxtegaLu. I \hbox{yoVjaneyu} acucxkaTATxgi oDamUDalu kAraNarAdavaru shirxVraMga DijiTelf sAPfTxveVrf TekAnxlajisf perxYveVTf limiTeDf kaMpani\-yavaru; adara muKayxsathxrAda porx. si.esf. yoVgAnaMda, shirxV ajuRnf kashayxpf, shirxV Di. shivashaMkarfravara eDebiDada saha\-kArakekx dhanayxvAdagaLu. aneVka goMdalagaLanunx bageharisi nAvu niVDida aneVka toMdaregaLanunx sahisikoMDu, beVsaragoLaLxde 15kUkx hecucx bAri tidudxpaDigaLanunx aLavaDisi, I niGaMTuvina kAyaRvanunx tALemxyiMda mADikoTaTx shirxV eM.pi. rAGaveVMdarx parxsAdf matutx shirxVmati esf. parxtiBAravarigU tuMbu haqdayada kaqtajacnxtegaLu. garxMthakekx muKapuTavanunx racisikoTaTx shirxV maMjunAthfravarige, shirxVmaThada kAyakabaMdhugaLige vaMdanegaLu. 
 
 \medskip
 
-I garxMthavanunx acucxkaTATxgi mudirxsikoTaTx lakiSxmXV mudarxNAlaya, beMgaLUru matutx I garxMthakekx sahAyadhanavanunx niVDida kananxDa matutx saMsakxqqti ilAKege visheVSa kaqtajacnxtegaLu.
+I garxMthavanunx acucxkaTATxgi mudirxsikoTaTx lakiSxmXV mudarxNAlaya, beMgaLUru matutx I garxMthakekx sahAyadhanavanunx niVDida kanARTaka sakARrada kananxDa matutx saMsakxqqti ilAKege visheVSa kaqtajacnxtegaLu.
 
 \medskip
 
-I pAriBASika padakoVshavu viVrasheYva-liMgAyata dhAmiRka, sAmAjika, sAMsakxqqtika adhayxyana, adhAyxpana hAgU\break saMshoVdhanege bahaLa upayukatx\-vAgali eMbudu I niGaMTu racaneya hiMdina AshayavAgide. samagarxteya kaDege iTaTx daqDha hejejx idAdarU ideV saMpUNaRveMba kalapxne namamxdalalx.
+I pAriBASika padakoVshavu viVrasheYva-liMgAyata dhAmiRka, sAmAjika, sAMsakxqqtika adhayxyana, adhAyxpana hAgU\break saMshoVdhanege bahaLa upayukatx\-vAgali eMbudu I niGaMTu racaneya hiMdina AshayavAgide. samagarxteya kaDege iTaTx daqDha hejejx idAdarU ideV saMpUNaRveMba kalapxne namamxdalalx. paripUNaRteya daqSiTxyiMda I niGaMTige saMbaMdhisidaMte racanAtamxka salahe, sUcanegaLu baMdare avugaLanunx vinayapUvaRkavAgi sivxVkarisi, muMdina mudarxNadalilx aLavaDisikoLuLxtetxVve.
 
-\vskip 1cm
+\vskip .5cm
 
 \hfill {\bf DA. naMdiVshf haMce}\qquad\,
 
