--- a/shubhasandesha.tex
+++ b/shubhasandesha.tex
@@ -1,3 +1,21 @@
+%\newpage
+
+%\thispagestyle{empty}
+
+%\begin{figure}[H]
+%\centering
+%\includegraphics[scale=.95]{images/Shubha1.eps}
+%\end{figure}
+
+%\newpage
+
+%\thispagestyle{empty}
+
+%\begin{figure}[H]
+%\centering
+%\includegraphics[scale=.95]{images/Shubha2.eps}
+%\end{figure}
+
 \begin{center}
 {\Huge\bfseries shuBa hAreYke}
 \end{center}
@@ -10,7 +28,7 @@ jagatitxna bahumuKi saMsakxqqtige avakAsha kalipxsiruva rASaTxrXgaLalilx BArata 
 
 \medskip
 
-``puNayxpApaMgaLeMbavu tamamx iSaTx kaMDire, `ayAyx' eMdaDe savxgaR, `elavo'  eMdaDe naraka. deVvA, BakAtx, jayA, jiV[yA] eMba nuDiyoLage keYlAsaveYduvude kUDalasaMgamadeVvA.'' idu I manoV\-dhamaRda mUladhAtu. ililxna bahuteVka mata\-paMthagaLige kAraNa AyA kAlada manoVdhamaRkekx anuguNavAgi jiVvana\-vidhAna rUpugoMDadedxV Agide. BAratada sAmAjika cariterxya adhayxyanaveMdare adu ililxna dhamaRgaLa, matapaMthagaLa kUlaMkaSa \hbox{adhayxyanaveMdeV} athaR. ililx dhamaR eMbudu yAvatUtx janajiVvanada oMdu aviBAjayx aMgavAgide. dhamaRvu janajiVvanavanunx parxBAvisida hAgeyeV janara baduku halavu veVLe dhamaRvanunx parxBAviside. I kAraNadiMdaleV BAratada cariterxyanunx atheRYsikoLuLxvudu savAlina kelasa. ililx \hbox{rAjakiVya}, AthiRka, sAmAjika, dhAmiRka saMgatigaLu tamage tAveV parxteyxVkavAgirade oMdaroLagoMdu beretuhoVgive. ivu\-gaLanunx viMgaDisi\break noVDuvAga atayxMta tALemx, jAgarUkate agatayx.
+``puNayxpApaMgaLeMbavu tamamx iSaTx kaMDire'' `ayAyx' eMdaDe savxgaR, `elavo'  eMdaDe naraka. deVvA, BakAtx, jayA, jiV[yA] eMba nuDiyoLage keYlAsaveYduvude kUDalasaMgamadeVvA.'' idu I manoV\-dhamaRda mUladhAtu. ililxna bahuteVka mata\-paMthagaLige kAraNa AyA kAlada manoVdhamaRkekx anuguNavAgi jiVvana\-vidhAna rUpugoMDadedxV Agide. BAratada sAmAjika cariterxya adhayxyanaveMdare adu ililxna dhamaRgaLa, matapaMthagaLa kUlaMkaSa \hbox{adhayxyanaveMdeV} athaR. ililx dhamaR eMbudu yAvatUtx janajiVvanada oMdu aviBAjayx aMgavAgide. dhamaRvu janajiVvanavanunx parxBAvisida hAgeyeV janara baduku halavu veVLe dhamaRvanunx parxBAviside. I kAraNadiMdaleV BAratada cariterxyanunx atheRYsikoLuLxvudu savAlina kelasa. ililx \hbox{rAjakiVya}, AthiRka, sAmAjika, dhAmiRka saMgatigaLu tamage tAveV parxteyxVkavAgirade oMdaroLagoMdu beretuhoVgive. ivu\-gaLanunx viMgaDisi\break noVDuvAga atayxMta tALemx, jAgarUkate agatayx.
 
 \medskip
 
