--- a/tex-for-print/anubandha-2.tex
+++ b/tex-for-print/anubandha-2.tex
@@ -1,5 +1,5 @@
 \begin{center}
-{\large\bf padasaMgarxha mADikoTiTxruva vidAvxMsarugaLu}
+{\large\bf padasaMgarxha mADikoTiTxruva vidAvxMsaru}
 
 \thispagestyle{empty}
 
@@ -11,11 +11,11 @@
 %\begin{longtable}{|r|p{10cm}|}
 \begin{longtable}{rl}
 \hline
-{\bf karx.saM.} & \multicolumn{1}{c}{\bf hesaru}\\[3pt]
+{\bf } & \multicolumn{1}{c}{\bf hesaru}\\[3pt]
 \hline
 \endfirsthead
 \hline
-{\bf karx.saM.} & \multicolumn{1}{c}{\bf hesaru}\\[3pt]
+{\bf } & \multicolumn{1}{c}{\bf hesaru}\\[3pt]
 \hline
   & \\[-10pt]
 \endhead
@@ -43,7 +43,7 @@
 %\hline
 12. & shirxV eM.ji. nAgarAjf, beMgaLUru\\
 %\hline
-13. &  shirxV nAgAbAyi bi buLALx, gulabagAR\\
+13. &  shirxVmati nAgAbAyi bi. buLALx, gulabagAR\\
 %\hline
 14. & shirxV niraMjana bAbu, beMgaLUru\\
 15. & shirxV parxBusAvxmi, meYsUru\\
@@ -54,7 +54,7 @@
 18. & shirxV bi.bi. pUjAri, solAlxpura\\
 %\hline
 19. & shirxV koV.raM. basavarAju, tumakUru\\
-20. & shirxVmati Arf.ePf. bALapapx 
+20. & shirxVmati ratanx ePf. bALapapxnavara 
 \end{longtable}}
 \end{minipage}
 \qquad\quad
@@ -63,11 +63,11 @@
 %\begin{longtable}{|r|p{10cm}|}
 \begin{longtable}{rl}
 \hline
-{\bf karx.saM.} & \multicolumn{1}{c}{\bf hesaru}\\[3pt]
+{\bf } & \multicolumn{1}{c}{\bf hesaru}\\[3pt]
 \hline
 \endfirsthead
 \hline
-{\bf karx.saM.} & \multicolumn{1}{c}{\bf hesaru}\\[3pt]
+{\bf } & \multicolumn{1}{c}{\bf hesaru}\\[3pt]
 \hline
   & \\[-10pt]
 \endhead
@@ -99,7 +99,7 @@
 %\hline
 32. & shirxVmati ecf.Ti. sheYlaja, meYsUru\\
 %\hline
-33. & shirxV saMgameVsha savadatitxmaTha\\
+33. & shirxV saMgameVsha savadatitxmaTha, dhAravADa\\
 %\hline
 34. & shirxVmati ke.ecf. sarasavxti, meYsUru\\
 %\hline
