--- a/tex-for-print/anubandha-4.tex
+++ b/tex-for-print/anubandha-4.tex
@@ -2,11 +2,11 @@
 %{\Huge\bfseries anubaMdha 3}
 
 %\vskip 1cm
-{\large\bf pAriBASika padakoVshada garxMthagaLa saMkiSxpatx sUci}
+{\large\bf pAriBASika padakoVshakekx baLasiruva garxMthagaLa saMkiSxpatx sUci}
 
 \bigskip
 
-{\bf (1) saMsakxqqta kaqtigaLu}
+{\bf 1. saMsakxqqta kaqtigaLu}
 \end{center}
 
 {\renewcommand{\arraystretch}{1.35}
@@ -176,7 +176,7 @@
 \newpage
 
 \begin{center}
-{\large\bf (2) vacanagarxMthagaLu}
+{\large\bf 2. vacanagarxMthagaLu}
 \end{center}
 
 \medskip
@@ -707,7 +707,7 @@
 \newpage
 
 \begin{center}
-{\large\bf (3) viVrasheYva kAvayx matutx itara kaqtigaLu}
+{\large\bf 3. viVrasheYva kAvayxgaLu matutx itara kaqtigaLu}
 \end{center}
 
 
@@ -715,74 +715,74 @@
 \begin{longtable}{>{\bf}lp{4.2cm}p{4.2cm}<{\raggedright}p{4.2cm}<{\raggedright}@{}}
 %\begin{longtable}{l>{\raggedright}p{7cm}l}
 \hline
-\multicolumn{1}{c}{\bf saMkiSxpatx} & \multicolumn{1}{c}{\bf kaqtiya hesaru} & \multicolumn{1}{c}{\bf kataqR} & \multicolumn{1}{c}{\bf vivara}\\[3pt]
+\multicolumn{1}{c}{\bf saMkiSxpAtxkaSxra} & \multicolumn{1}{c}{\bf kaqtiya hesaru} & \multicolumn{1}{c}{\bf kataqR} & \multicolumn{1}{c}{\bf vivara}\\[3pt]
 \hline
 \endfirsthead
 \hline
-\multicolumn{1}{c}{\bf saMkiSxpatx} & \multicolumn{1}{c}{\bf kaqtiya hesaru} & \multicolumn{1}{c}{\bf kataqR} & \multicolumn{1}{c}{\bf vivara}\\[3pt]
+\multicolumn{1}{c}{\bf saMkiSxpAtxkaSxra} & \multicolumn{1}{c}{\bf kaqtiya hesaru} & \multicolumn{1}{c}{\bf kataqR} & \multicolumn{1}{c}{\bf vivara}\\[3pt]
 \hline
 \endhead
 %%\hline
 \endfoot
 \endlastfoot
-anuBa & anuBavasAra &  nijaguNa shivayoVgi\newline (saM.) pi.Arf. karibasavashAsitxrX & vesilxyanf miSanf perxsf\newline meYsUru - 1984\\
-kananxni & kananxDa-kananxDa niGaMTu\newline (kasApa) & (parx.saM.) Di.elf. narasiMhAcArf & kananxDa sAhitayx pariSatutx\newline beMgaLUru - 2010\\
-karaNa & karaNahasige & cananxbasavaNaNxnavaru & kananxDa adhayxyana piVTha\newline kanARTaka vishavxvidAyxlaya\newline dhAravADa - 1968\\
-keYvaliV & keYvalayxsArada TiVku & nijaguNashivayoVgi\newline (saM.) malalxNaNx & hasatxparxti. OriyaMTalf risacfR infsxTiTUyxTf\newline meYsUru\\ 
-keYvapa & keYvalayxpadadhxti & nijaguNa shivayoVgi\newline (saM.) rudarxpapx & kaqSaNxrAjavilAsa mudArxkaSxra shAle, beMgaLUru - 1874\\
-keYvasha & keYvalayxsoVpAna nAmeYkoVtatxra shatasathxla & imamxDi muruGA guru\-sidadhx\newline \phantom{AA} sAvxmigaLu & malenADa viVrasheYva adhayxyana saMsethx, shivamogagx - 2006\\
-gaNaBA & gaNaBASitaratanxmAle & gubibx malalxNaNx\newline (saM.) parxBusAvxmigaLu & shirxVbAlaliVlA mahaMta shivayoVgiVshavxra garxMthamAle\newline dhAravADa - 1948\\
-gurucA & gururAjacAritarx & sidadhxnaMjeVsha\newline (saM.) saM.shi. BUsanUra maTha & shirxVbAlaliVlA mahAMta shivayoVgiVshavxra garxMthamAle, dhAravADa - 1950\\
-cananxba. ka. & cananxbasavaNaNxnavara vacanagaLu\newline (kanARTaka vishavxvidAyxlaya) & cananxbasavaNaNxnavaru\newline (saM.) Arf.si. hireVmaTha & kananxDa adhayxyana saMsethx\newline kanARTaka vishavxvidAyxlaya\newline dhAravADa - 1964\\
-cananxsotxV & cananxbasaveVshavxradeVvara sotxVtarxda\newline \phantom{AA} vacanagaLu & saMpAdaneya sidadhxviVraNoNxDeyara saMkalana & viVrasheYva adhayxyana saMsethx\newline gadaga - 1973\\
-cebapu & cenanxbasavapurANa & virUpAkaSx paMDita\newline (saM.) shi.shi. basavanALa & liMgAyata vidAyxBivaqdidhx saMsethxya vAknamxya shAKe\newline dhAravADa - 1934\\
-tirxpuvi & tirxSaSiTxpurAtana viLAsaM & suraMga\newline (saM.) dAnapapx shAsitxrX & vAgedxVviVvilAsa mudArxlaya\newline dAvaNagere - 1902\\
-diVkASxboV & diVkASxboVdhe & kereya padamxrasa & kanARTaka vishavxvidAyxlaya\newline dhAravADa - 1972\\
-nUpura & nUtana purAtanara ragaLegaLu & harihara\newline (saM.) Arf.si. hireVmaTha & kananxDa adhayxyana piVTha\newline dhAravADa - 1983\\
-padagoV & cananxbasavaNaNx padamaMtarx\newline goVpayxnavara vacanagaLu & cananxbasavaNaNxnavaru\newline (saM.) Arf.si. hireVmaTha & kananxDa adhayxyana saMsethx\newline kanARTaka vishavxvidAyxlaya\newline dhAravADa - 1973\\
-padeYsha & padeYkoVtatxra shatasathxla & & \\
-parate & pAramAthaRgiVte & nijaguNa shivayoVgi\newline (saM.) esf. vidAyxshaMkarf & kananxDa matutx saMsakxqqti nideRVshanAlaya, beMgaLUru - 1998\\
-paramA & paramAnuBavaboVdhe & nijaguNa shivayoVgi\newline (saM.) esf. vidAyxshaMkarf & kananxDa matutx saMsakxqqti nideRVshanAlaya, beMgaLUru - 1998\\
-pArake & pAramAthaRparxkAshike & nijaguNa shivayoVgi\newline (saM.) esf. vidAyxshaMkarf & kananxDa matutx saMsakxqqti nideRVshanAlaya, beMgaLUru - 1998\\
-purAta & purAtanara tirxvidhi & nijaguNa shivayoVgi\newline (saM.) esf. vidAyxshaMkarf & kananxDa matutx saMsakxqqti nideRVshanAlaya, beMgaLUru - 1998\\
-parxtiSAThx & parxtiSAThxkalapxTiVke & vAdikumudacaMdarx & hasatxparxti, pArxcayx vidAyx saMshoVdhanAlaya, meYsUru\\
-parxBuliV & parxBuliMgaliVle & cAmarasa\newline (saM.) Arf.si. hireVmaTha & kananxDa adhayxyana piVTha\newline dhAravADa - 1973\\
-pwrxDharA & pwrxDharAyana kAvayx & adaqshayxkavi\newline (saM.) shi. BUsanUra maTha & kanARTaka bukfDipo, baLALxri - 1914\\
-basaTiV & basavaNaNxnavara TiVkina\newline vacanagaLu & eM.eM. kalabugiR & kananxDa adhayxyana piVTha, (saMpAdakaru) dhAravADa - 1983\\
-basapu & basavapurANa & BiVmakavi\newline (saM.) Arf.si. hireVmaTha & liMgAyata vidAyxBivaqdidhx saMsethx\newline dhAravADa - 1958\\
-basava. ka. & basavaNaNxnavara vacanagaLu\newline (kanARTaka vishavxvidAyxlaya) & basavaNaNxnavaru\newline (saM.) shi.shi. basavanALa & kanARTaka vishavxvidAyxlaya\newline dhAravADa - 1962\\
-BArada & BAratiVya saMsakxqqti dashaRna & a.na. kaqSaNxrAya (saMpAdakaru) & sAhitayx matutx saMsakxqqti aBivaqdidhx ilAKe, beMgaLUru - 1962\\
-BAvaciM & BAvaciMtAratanxM & gubibx malalxNAyaR\newline (saM.) esf.ji. narasiMhAcArf & kanARTaka kAvayxkalAnidhi\newline meYsUru - 1900\\
+~~1. anuBa & anuBavasAra &  nijaguNa shivayoVgi\newline (saM.) pi.Arf. karibasavashAsitxrX & vesilxyanf miSanf perxsf\newline meYsUru - 1984\\
+~~2. kananxni & kananxDa-kananxDa niGaMTu\newline (kasApa) & (parx.saM.) Di.elf. narasiMhAcArf & kananxDa sAhitayx pariSatutx\newline beMgaLUru - 2010\\
+~~3. karaNa & karaNahasige & cananxbasavaNaNxnavaru & kananxDa adhayxyana piVTha\newline kanARTaka vishavxvidAyxlaya\newline dhAravADa - 1968\\
+~~4. keYvaliV & keYvalayxsArada TiVku & nijaguNashivayoVgi\newline (saM.) malalxNaNx & hasatxparxti. OriyaMTalf risacfR infsxTiTUyxTf\newline meYsUru\\ 
+~~5. keYvapa & keYvalayxpadadhxti & nijaguNa shivayoVgi\newline (saM.) rudarxpapx & kaqSaNxrAjavilAsa mudArxkaSxra shAle, beMgaLUru - 1874\\
+~~6. keYvasha & keYvalayxsoVpAna nAmeYkoVtatxra shatasathxla & imamxDi muruGA guru\-sidadhx\newline \phantom{AA} sAvxmigaLu & malenADa viVrasheYva adhayxyana saMsethx, shivamogagx - 2006\\
+~~7. gaNaBA & gaNaBASitaratanxmAle & gubibx malalxNaNx\newline (saM.) parxBusAvxmigaLu & shirxVbAlaliVlA mahaMta shivayoVgiVshavxra garxMthamAle\newline dhAravADa - 1948\\
+~~8. gurucA & gururAjacAritarx & sidadhxnaMjeVsha\newline (saM.) saM.shi. BUsanUra maTha & shirxVbAlaliVlA mahAMta shivayoVgiVshavxra garxMthamAle, dhAravADa - 1950\\
+~~9. cananxba. ka. & cananxbasavaNaNxnavara vacanagaLu\newline (kanARTaka vishavxvidAyxlaya) & cananxbasavaNaNxnavaru\newline (saM.) Arf.si. hireVmaTha & kananxDa adhayxyana saMsethx\newline kanARTaka vishavxvidAyxlaya\newline dhAravADa - 1964\\
+10. cananxsotxV & cananxbasaveVshavxradeVvara sotxVtarxda\newline \phantom{AA} vacanagaLu & saMpAdaneya sidadhxviVraNoNxDeyara saMkalana & viVrasheYva adhayxyana saMsethx\newline gadaga - 1973\\
+11. cebapu & cenanxbasavapurANa & virUpAkaSx paMDita\newline (saM.) shi.shi. basavanALa & liMgAyata vidAyxBivaqdidhx saMsethxya vAknamxya shAKe\newline dhAravADa - 1934\\
+12. tirxpuvi & tirxSaSiTxpurAtana viLAsaM & suraMga\newline (saM.) dAnapapx shAsitxrX & vAgedxVviVvilAsa mudArxlaya\newline dAvaNagere - 1902\\
+13. diVkASxboV & diVkASxboVdhe & kereya padamxrasa & kanARTaka vishavxvidAyxlaya\newline dhAravADa - 1972\\
+14. nUpura & nUtana purAtanara ragaLegaLu & harihara\newline (saM.) Arf.si. hireVmaTha & kananxDa adhayxyana piVTha\newline dhAravADa - 1983\\
+15. padagoV & cananxbasavaNaNx padamaMtarx\newline goVpayxnavara vacanagaLu & cananxbasavaNaNxnavaru\newline (saM.) Arf.si. hireVmaTha & kananxDa adhayxyana saMsethx\newline kanARTaka vishavxvidAyxlaya\newline dhAravADa - 1973\\
+16. padeYsha & padeYkoVtatxra shatasathxla & & \\
+17. parate & pAramAthaRgiVte & nijaguNa shivayoVgi\newline (saM.) esf. vidAyxshaMkarf & kananxDa matutx saMsakxqqti nideRVshanAlaya, beMgaLUru - 1998\\
+18. paramA & paramAnuBavaboVdhe & nijaguNa shivayoVgi\newline (saM.) esf. vidAyxshaMkarf & kananxDa matutx saMsakxqqti nideRVshanAlaya, beMgaLUru - 1998\\
+19. pArake & pAramAthaRparxkAshike & nijaguNa shivayoVgi\newline (saM.) esf. vidAyxshaMkarf & kananxDa matutx saMsakxqqti nideRVshanAlaya, beMgaLUru - 1998\\
+20. purAta & purAtanara tirxvidhi & nijaguNa shivayoVgi\newline (saM.) esf. vidAyxshaMkarf & kananxDa matutx saMsakxqqti nideRVshanAlaya, beMgaLUru - 1998\\
+21. parxtiSAThx & parxtiSAThxkalapxTiVke & vAdikumudacaMdarx & hasatxparxti, pArxcayx vidAyx saMshoVdhanAlaya, meYsUru\\
+22. parxBuliV & parxBuliMgaliVle & cAmarasa\newline (saM.) Arf.si. hireVmaTha & kananxDa adhayxyana piVTha\newline dhAravADa - 1973\\
+23. pwrxDharA & pwrxDharAyana kAvayx & adaqshayxkavi\newline (saM.) shi. BUsanUra maTha & kanARTaka bukfDipo, baLALxri - 1914\\
+24. basaTiV & basavaNaNxnavara TiVkina\newline vacanagaLu & eM.eM. kalabugiR & kananxDa adhayxyana piVTha, (saMpAdakaru) dhAravADa - 1983\\
+25. basapu & basavapurANa & BiVmakavi\newline (saM.) Arf.si. hireVmaTha & liMgAyata vidAyxBivaqdidhx saMsethx\newline dhAravADa - 1958\\
+26. basava. ka. & basavaNaNxnavara vacanagaLu\newline (kanARTaka vishavxvidAyxlaya) & basavaNaNxnavaru\newline (saM.) shi.shi. basavanALa & kanARTaka vishavxvidAyxlaya\newline dhAravADa - 1962\\
+27. BArada & BAratiVya saMsakxqqti dashaRna & a.na. kaqSaNxrAya (saMpAdakaru) & sAhitayx matutx saMsakxqqti aBivaqdidhx ilAKe, beMgaLUru - 1962\\
+28. BAvaciM & BAvaciMtAratanxM & gubibx malalxNAyaR\newline (saM.) esf.ji. narasiMhAcArf & kanARTaka kAvayxkalAnidhi\newline meYsUru - 1900\\
 %maDivA & maDivALapapxna nijaliVlAmaqta vacana & maDivALapapx & kananxDa matutx saMsakxqqti nideRVshanAlaya, beMgaLUru - 2000\\
-manoVvi & manoVvijaya & gurubasava\newline (saM.) emf.e. nArAyaNashAsitxrX & guruvilAsa pirxMTiMgf vakfsxR\newline beMgaLUru - 1924\\
-mishArxpaR & mishArxpaRNa & cananxbasavaNaNxnavaru (saM.) shi.shi. basavanALa & kananxDa adhayxyana saMsethx\newline dhAravADa - 1964\\
-rAjasheV &  rAjasheVKara viLAsaM & SaDakaSxradeVva\newline (saM.) Di.Arf. karibasavashAsitxrXV & bi.e. koVdaMDarAma bukf Dipo, meYsUru - 1953\\
-liMgaliV & liMgaliVlAvilAsacAritarx & kalulxmaThada parxBudeVvaru\newline (saM.) shi.shi. BUsanUramaTha & muruGAmaTha, dhAravADa\newline - 1960\\
-vapaBA & vacana pariBASAkoVsha & (saM.) esf. vidAyxshaMkara & kananxDa matutx saMsakxqqti nideRVshanAlaya, beMgaLUru - 2000\\ 
-vacara & vacanashAsatxrXrahasayx & raM.rA. divAkara & adhAyxtamx kAyARlaya\newline hubabxLiLx - 1952\\
-vacashA & vacanashAsatxrXsAra & (saM.) Pa.gu. haLakaTiTx & shivAnuBAva garxMthamAlA\newline vijApura - 1931\\
-viveVka & viveVkaciMtAmaNi & nijaguNa shivayoVgi\newline (saM.) Arf.si. hireVmaTha & shirxV jagadugxru gaMgAdhara dhamaRparxcAraka maMDala\newline mUrusAviramaTha, hubabxLiLx - 1964\\
-viVsheYpu & viVrasheYvAmaqtapurANaM & gubibx malalxNAyaR\newline (saM.) Arf.si. hireVmaTha & enf.esf.esf. kalAyxNakeVMdarx\newline beLagAvi - 1990\\
-shakitxvi & shakitxvishiSATxdevxYtaveVdAMta & Ti.ji. sidadhxpApxrAdhayx & meYsUru vishavxvidAyxnilaya\newline meYsUru - 1973\\
-shabashaM & shabarashaMkaraviLAsaM & SaDakaSxradeVva\newline (saM.) shi.shi. basavanALa & liMgAyata vidAyxBivaqdidhx saMsethx, dhAravADa - 1938\\
-sharaca & sharaNacaritAmaqta & sidadhxyayx purANika & vayasakxra shikaSxNa samiti\newline meYsUru - 1974\\
-sharasA & sharaNa sAhitayx (mAsapatirxke) & (saM.) bi. shivamUtiR shAsitxrXV & savxtaMtarx kaNARTaka perxsf\newline beMgaLUru - 1937\\
-shivaciM & shivatatatxvX ciMtAmaNi & lakakxNaNx daMDeVsha & pArxcayx vidAyx saMshoVdhanAlaya, meYsUru\\
-shivAkoV & shivAnuBava shabadxkoVsha & Pa.gu. haLakaTiTx & samAja pusatxkAlaya\newline dhAravADa - 2003\\
-shivAsU & shivAnuBavasUtarxM & magegxya mAyideVva & shivAnuBava garxMthamAle\newline - 1934\\
-shUnayxku & shUnayxsaMpAdaneyanunx kuritu & eM. cidAnaMdamUtiR & moVhana parxkAshana, meYsUru - 2000\\
-shUnayxmaM & shUnayxmaMtarxgoVpayx & imamxDi gurusidadhxsAvxmigaLu & kananxDa matutx saMsakxqqti nideRVshanAlaya, beMgaLUru - 2001\\
-Sabarxva & SaTasxthXlabarxhAmxnaMda virakatxcAritarx saMpAdaneya vacanagaLu & (saM.) esf. umApati & viVrasheYva adhayxyana saMsethx\newline gadaga - 1998\\
-sakiVla & toMbatAtxru sakiVlagaLu & cananxbasavaNaNxnavaru & kananxDa adhayxyana saMsethx\newline dhAravADa\\
-savaRjacnx & savaRjacnxna vacanagaLu & savaRjacnx\newline (saM.) DA. rUpA & kananxDa vishavxvidAyxnilaya, haMpi - 2000\\
+29. manoVvi & manoVvijaya & gurubasava\newline (saM.) emf.e. nArAyaNashAsitxrX & guruvilAsa pirxMTiMgf vakfsxR\newline beMgaLUru - 1924\\
+30. mishArxpaR & mishArxpaRNa & cananxbasavaNaNxnavaru (saM.) shi.shi. basavanALa & kananxDa adhayxyana saMsethx\newline dhAravADa - 1964\\
+31. rAjasheV &  rAjasheVKara viLAsaM & SaDakaSxradeVva\newline (saM.) Di.Arf. karibasavashAsitxrXV & bi.e. koVdaMDarAma bukf Dipo, meYsUru - 1953\\
+32. liMgaliV & liMgaliVlAvilAsacAritarx & kalulxmaThada parxBudeVvaru\newline (saM.) shi.shi. BUsanUramaTha & muruGAmaTha, dhAravADa\newline - 1960\\
+33. vapaBA & vacana pariBASAkoVsha & (saM.) esf. vidAyxshaMkara & kananxDa matutx saMsakxqqti nideRVshanAlaya, beMgaLUru - 2000\\ 
+34. vacara & vacanashAsatxrXrahasayx & raM.rA. divAkara & adhAyxtamx kAyARlaya\newline hubabxLiLx - 1952\\
+35. vacashA & vacanashAsatxrXsAra & (saM.) Pa.gu. haLakaTiTx & shivAnuBAva garxMthamAlA\newline vijApura - 1931\\
+36. viveVka & viveVkaciMtAmaNi & nijaguNa shivayoVgi\newline (saM.) Arf.si. hireVmaTha & shirxV jagadugxru gaMgAdhara dhamaRparxcAraka maMDala\newline mUrusAviramaTha, hubabxLiLx - 1964\\
+37. viVsheYpu & viVrasheYvAmaqtapurANaM & gubibx malalxNAyaR\newline (saM.) Arf.si. hireVmaTha & enf.esf.esf. kalAyxNakeVMdarx\newline beLagAvi - 1990\\
+38. shakitxvi & shakitxvishiSATxdevxYtaveVdAMta & Ti.ji. sidadhxpApxrAdhayx & meYsUru vishavxvidAyxnilaya\newline meYsUru - 1973\\
+39. shabashaM & shabarashaMkaraviLAsaM & SaDakaSxradeVva\newline (saM.) shi.shi. basavanALa & liMgAyata vidAyxBivaqdidhx saMsethx, dhAravADa - 1938\\
+40. sharaca & sharaNacaritAmaqta & sidadhxyayx purANika & vayasakxra shikaSxNa samiti\newline meYsUru - 1974\\
+41. sharasA & sharaNa sAhitayx (mAsapatirxke) & (saM.) bi. shivamUtiR shAsitxrXV & savxtaMtarx kaNARTaka perxsf\newline beMgaLUru - 1937\\
+42. shivaciM & shivatatatxvX ciMtAmaNi & lakakxNaNx daMDeVsha & pArxcayx vidAyx saMshoVdhanAlaya, meYsUru\\
+43. shivAkoV & shivAnuBava shabadxkoVsha & Pa.gu. haLakaTiTx & samAja pusatxkAlaya\newline dhAravADa - 2003\\
+44. shivAsU & shivAnuBavasUtarxM & magegxya mAyideVva & shivAnuBava garxMthamAle\newline - 1934\\
+45. shUnayxku & shUnayxsaMpAdaneyanunx kuritu & eM. cidAnaMdamUtiR & moVhana parxkAshana, meYsUru - 2000\\
+46. shUnayxmaM & shUnayxmaMtarxgoVpayx & imamxDi gurusidadhxsAvxmigaLu & kananxDa matutx saMsakxqqti nideRVshanAlaya, beMgaLUru - 2001\\
+47. Sabarxva & SaTasxthXlabarxhAmxnaMda virakatxcAritarx saMpAdaneya vacanagaLu & (saM.) esf. umApati & viVrasheYva adhayxyana saMsethx\newline gadaga - 1998\\
+48. sakiVla & toMbatAtxru sakiVlagaLu & cananxbasavaNaNxnavaru & kananxDa adhayxyana saMsethx\newline dhAravADa\\
+49. savaRjacnx & savaRjacnxna vacanagaLu & savaRjacnx\newline (saM.) DA. rUpA & kananxDa vishavxvidAyxnilaya, haMpi - 2000\\
            & shirxVvatasx niGaMTu & (saM.) Ti.vi. veMkaTAcala shAsitxrXV & shAradAmaMdira, meYsUru - 1971\\
-savaRva & savaRpurAtanara vacana & (saM.) cananxmalilxkAjuRna & sadadhxmaRdiVpike garxMthamAlA\newline meYsUru\\
-sAnaMca & sAnaMda cariterx & kumAra padamxrasa & pArxcayx vidAyx saMshoVdhanAlaya\newline meYsUru\\
-sidadhxrA. ka. & sidadhxrAmeVshavxra vacanagaLu\newline (kanARTaka vishavxvidAyxlaya) & (saM.) Arf.si. hireVmaTha & kanARTaka vishavxvidAyxlaya\newline dhAravADa - 1960\\
-sidedhxVva & sidedhxVshavxra vacanagaLu & sidadhxliMgasAvxmi\newline (saM.) cananxmalilxkAjuRna & shivasadadhxmaR diVpike\newline meYsUru - 1951\\
-savxrUpa & savxrUpasididhxTiVke & nijaguNa shivayoVgi & kananxDa matutx saMsakxqqti nideRVshanAlaya, beMgaLUru - 2000\\
-hiMdasA & hiMdU dashaRnasAra & lakiSxmXVpuraM shirxVnivAsAcAyaR & meYsUru vishavxvidAyxnilaya\newline meYsUru - 1940\\
-hirimaM & hiriya maMtarxgoVpayx & cananxbasavaNaNxnavaru & kananxDa adhayxyana saMsethx\newline dhAravADa - 1941\\
+50. savaRva & savaRpurAtanara vacana & (saM.) cananxmalilxkAjuRna & sadadhxmaRdiVpike garxMthamAlA\newline meYsUru\\
+51. sAnaMca & sAnaMda cariterx & kumAra padamxrasa & pArxcayx vidAyx saMshoVdhanAlaya\newline meYsUru\\
+52. sidadhxrA. ka. & sidadhxrAmeVshavxra vacanagaLu\newline (kanARTaka vishavxvidAyxlaya) & (saM.) Arf.si. hireVmaTha & kanARTaka vishavxvidAyxlaya\newline dhAravADa - 1960\\
+53. sidedhxVva & sidedhxVshavxra vacanagaLu & sidadhxliMgasAvxmi\newline (saM.) cananxmalilxkAjuRna & shivasadadhxmaR diVpike\newline meYsUru - 1951\\
+54. savxrUpa & savxrUpasididhxTiVke & nijaguNa shivayoVgi & kananxDa matutx saMsakxqqti nideRVshanAlaya, beMgaLUru - 2000\\
+55. hiMdasA & hiMdU dashaRnasAra & lakiSxmXVpuraM shirxVnivAsAcAyaR & meYsUru vishavxvidAyxnilaya\newline meYsUru - 1940\\
+56. hirimaM & hiriya maMtarxgoVpayx & cananxbasavaNaNxnavaru & kananxDa adhayxyana saMsethx\newline dhAravADa - 1941\\
  & vaNaRnAtamxka vacana padakoVsha & DA. saMgameVsha savadatitx maTha & rUparashimx parxkAshakaru\newline dhAravADa - 2009
 \end{longtable}}
 %apapxNaNx, samava & haDapada apapxNaNxna vacanagaLu &  vacana, puTa\\
